# uptimo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  STARTUP.md  alembic.ini  config.py  package.json  pyproject.toml  wsgi.py
.github/workflows/: docker-publish.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 10c64b68ff24_add_missing_dark_mode_color_fields_to_.py  156027c76783_add_kafka_monitor_fields.py  28db2243365b_add_http_advanced_features.py  2908373e6ce2_add_critical_performance_indexes.py  54a270d5773c_add_consecutive_failure_tracking.py  579ac7ed1c53_add_oidc_authentication_support.py  6c9d8cd6c81c_merge_oidc_authentication_support.py  6fee1ec26f10_fix_oidc_provider_column_names.py  73d2db348c9b_initial_schema.py  8f93f0f8383b_add_kafka_consumer_group_field.py  a10c12e51bcb_add_composite_indexes_for_performance_.py  a34c0f1c4f19_add_app_settings_table.py  add_oidc_authentication_support.py  cc40503cb931_add_publicstatuspage_model_for_public_.py  fc8f47027f1b_add_user_incident_views_tracking.py  fd4bbc9bd573_add_color_customization_fields_to_app_.py
app/: __init__.py  decorators.py  template_filters.py
app/cli/: clear_tls_certs.py  create_admin.py  data_retention.py
app/forms/: __init__.py  auth.py  color_customization.py  monitor.py  monitor_notification.py  notification.py  oidc.py  public_status.py  settings.py
docs/: alembic_migration_guide.md  data_retention.md  kafka_monitor_upgrade.md
scripts/: update_frontend_deps.py  verify_query_plans.py
tests/: test_data_retention.py
(+100 files in other folders)
