[project]
name = "uptimo"
version = "0.1.0"
description = "Monitoring application like UptimeRobot for personal/small-team use"
authors = [
    {name = "Uptimo Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-login>=0.6.0",
    "flask-wtf>=1.1.0",
    "werkzeug>=2.3.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "ping3>=4.0.0",
    "kafka-python>=2.0.0",
    "python-dotenv>=1.0.0",
    "wtforms>=3.0.0",
    "email-validator>=2.0.0",
    "jinja2>=3.1.0",
    "sendgrid>=6.12.5",
    "dnspython>=2.6.1",
    "python-whois>=0.9.6",
    "alembic>=1.14.1",
    "pytz>=2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pyrefly>=0.42.1",
    "pytest>=8.3.5",
]
